src/main/default/objects/Equipment_Planning__c/Equipment_Planning__c.object-meta.xml
<CustomObject>
    <description>This object tracks the actual equipment that is scheduled on the job.  It will eventually be used to track non-job locations for equipment as well such as repair shops or inspection facilities.</description>
    <label>Equipment Planning</label>
    <nameField>
        <displayFormat>JE-{0}</displayFormat>
        <label>Equipment Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Planning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>