src/main/default/objects/Equipment_Planning__c/fields/Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code__c</fullName>
    <inlineHelpText>Charge code used to bill the customer for the equipment.</inlineHelpText>
    <label>Charge Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shop Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>