src/main/default/objects/Equipment_Planning__c/fields/Comparable_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Comparable_End_Date__c</fullName>
    <description>Used for internal date comparison with the Job Scheduling/Whiteboard feature.</description>
    <formula>VALUE(TEXT(YEAR(DATEVALUE(IF(ISBLANK(Planned_End__c),Planned_Start__c,Planned_End__c))))+LPAD(TEXT(MONTH(DATEVALUE(IF(ISBLANK(Planned_End__c),Planned_Start__c,Planned_End__c)))),2,'0')+LPAD(TEXT(DAY(DATEVALUE(IF(ISBLANK(Planned_End__c),Planned_Start__c,Planned_End__c)))),2,'0'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date and time the equipment is due to stop being used on the job.</inlineHelpText>
    <label>Comparable_End_Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>