src/main/default/objects/Equipment_Planning__c/fields/Equipment2__c.field-meta.xml
<CustomField>
    <fullName>Equipment2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Equipment Planning (Equipment)</relationshipLabel>
    <relationshipName>Equipment_Planning</relationshipName>
    <type>Lookup</type>
</CustomField>