src/main/default/objects/Equipment_Planning__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Job on which the equipment is scheduled for use.</inlineHelpText>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Equipment Planning</relationshipLabel>
    <relationshipName>Job_Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>