src/main/default/objects/Equipment_Planning__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer for the job.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Planning</relationshipLabel>
    <relationshipName>Equipment_Planning</relationshipName>
    <type>Lookup</type>
</CustomField>