src/main/default/objects/Equipment_Planning__c/fields/Planned_End__c.field-meta.xml
<CustomField>
    <fullName>Planned_End__c</fullName>
    <description>The planned end date/time for this equipment.</description>
    <inlineHelpText>Date and time the equipment is due to stop being used on the job.</inlineHelpText>
    <label>Planned End</label>
    <type>DateTime</type>
</CustomField>