src/main/default/objects/Equipment_Planning__c/fields/Planned_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start__c</fullName>
    <description>The planned start date/time for this equipment.</description>
    <inlineHelpText>Date and time the equipment is due to start being used on the job.</inlineHelpText>
    <label>Planned Start</label>
    <type>DateTime</type>
</CustomField>