src/main/default/objects/Equipment_Planning__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Price book item for the equipment.</inlineHelpText>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Equipment Planning</relationshipLabel>
    <relationshipName>Equipment_Planning</relationshipName>
    <type>Lookup</type>
</CustomField>